fix misalignment on landing page's description

--- a/components/Landing/FeatureCards.module.css
+++ b/components/Landing/FeatureCards.module.css
@@ -9,8 +9,8 @@
 
 .description {
     max-width: 600px;
-    margin: auto;
-
+    text-align: center;
+    
     &::after {
         content: '';
         display: block;
